Login y correccion de errores Api
